# platform-reports

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  minikube.sh  push.py  pyproject.toml  setup.cfg  setup.py  test.py  values.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  test.yaml  update-pre-commit.yml
charts/: .gitignore
charts/platform-reports/: Chart.yaml  README.md  values-dev.yaml  values.yaml
charts/platform-reports/dashboards/: home.json
charts/platform-reports/dashboards/admin/: credits.json  jobs.json  prices.json  services.json
charts/platform-reports/dashboards/cluster/: credits.json  jobs.json  nodes.json  overview.json  prices.json
charts/platform-reports/dashboards/org/: org_credits.json  org_jobs.json
charts/platform-reports/dashboards/project/: job.json  project_jobs.json  user_credits.json  user_jobs.json
charts/platform-reports/dashboards/user/: job.json  user_credits.json  user_jobs.json
charts/platform-reports/files/grafana-dashboards/: home.json
charts/platform-reports/files/grafana-dashboards/cluster/: apps.json  credits.json  jobs.json  nodes.json  prices.json  resources.json  services.json
charts/platform-reports/files/grafana-dashboards/org/: org_apps.json  org_credits.json  org_jobs.json  org_resources.json
charts/platform-reports/files/grafana-dashboards/project/: app_instance.json  job.json  project_apps.json  project_apps_credits.json  project_credits.json  project_jobs.json
charts/platform-reports/files/prometheus-rules/: alertmanager.yaml  federated-aggregates.yaml  kube-control-plane.yaml  node-exporter.yaml  prometheus-operator.yaml  prometheus.yaml  traefik.yaml
charts/platform-reports/templates/: _helpers.tpl  externalSecret.yaml  grafana-dashboards.yaml  grafana-proxy-deployment.yaml  grafana-proxy-ingress.yaml  grafana-proxy-svc.yaml  metrics-api-deployment.yaml  metrics-api-ingress.yaml  metrics-api-svc.yaml  metrics-exporter-deployment.yaml  metrics-exporter-scrape-config.yaml  metrics-exporter-svc.yaml  metrics-exporter.yaml  nvidia-dcgm-counters.yaml  nvidia-dcgm-exporter.yaml  prometheus-additional-scrape-cfg.yaml  prometheus-proxy-deployment.yaml  prometheus-proxy-svc.yaml  prometheus-rules.yaml  secrets.yaml  thanos-object-storage-config-secret.yaml
deploy/: .gitignore
deploy/platform-reports/: Chart.yaml  requirements.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-template.yaml  values.yaml
deploy/platform-reports/dashboards/: home.json
deploy/platform-reports/dashboards/admin/: jobs.json  nodes.json  prices.json
deploy/platform-reports/dashboards/user/: job.json  user_jobs.json
deploy/platform-reports/templates/: _helpers.tpl  grafana-dashboards.yaml  grafana-default-dashboards-configmap.yaml  grafana-home-dashboard-configmap.yaml  grafana-ingress.yaml  grafana-proxy-deployment.yaml  grafana-proxy-svc.yaml  metrics-exporter.yaml  neuro-metrics-exporter.yaml  nvidia-dcgm-counters.yaml  nvidia-dcgm-exporter.yaml  prometheus-crds.yaml  prometheus-proxy-deployment.yaml  prometheus-proxy-svc.yaml  thanos-object-storage-config-secret.yaml
platform_reports/: api.py  auth.py  cluster.py  config.py  config_client.py  kube_client.py  metrics.py  prometheus.py  prometheus_grammars.py
platform_reports/promql_ast/: PromQLLexer.g4  PromQLParser.g4
requirements/: dev.txt
src/platform_reports/: api.py  auth.py  cluster.py  config.py  kube_client.py  metrics_collector.py  metrics_service.py  platform_api_client.py  platform_apps_client.py  prometheus.py  prometheus_client.py  prometheus_query_parser.py  schema.py
tests/: conftest.py
tests/integration/: conftest.py  conftest_kube.py  conftest_platform_api.py  conftest_platform_auth.py  conftest_platform_config.py  kube.py  platform_api.py  platform_auth.py  platform_config.py  test_api.py  test_config_client.py  test_kube_client.py  test_metrics.py  test_metrics_service.py
tests/integration/docker/: .gitignore  docker-compose.yaml
tests/integration/docker/grafana/: dashboardproviders.yaml  datasources.yaml  grafana.ini  nodes.json  org_resources.json  resources.json
tests/integration/docker/platform-auth/: Dockerfile
tests/integration/docker/prometheus/: prometheus.yaml
tests/unit/: test_auth.py  test_config.py  test_kube_client.py  test_metrics.py  test_metrics_service.py  test_prometheus.py  test_prometheus_query_parser.py  test_schema.py
