[metadata]
name = platform-reports
description = Neu.ro platform reports
url = https://github.com/neuro-inc/platform-reports
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    neuro-auth-client==21.12.1
    neuro-config-client==22.1.3
    neuro-sdk==22.1.3
    neuro-logging==21.12.2
    aiohttp==3.8.1
    python-jose==3.3.0
    lark-parser==0.12.0
    aiobotocore==2.1.0
    google-api-python-client==2.36.0

[options.entry_points]
console_scripts =
    metrics-server = platform_reports.api:run_metrics_server
    prometheus-proxy = platform_reports.api:run_prometheus_proxy
    grafana-proxy = platform_reports.api:run_grafana_proxy

[options.extras_require]
dev =
    mypy==0.931
    pre-commit==2.17.0
    pytest==6.2.5
    pytest-aiohttp==1.0.3
    pytest-asyncio==0.17.2
    types-PyYAML==6.0.4

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    ignore::DeprecationWarning:aiohttp
    ignore:invalid escape sequence:DeprecationWarning

[coverage:run]
branch = True
source = platform_reports

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional=True

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-aiohttp_security.*]
ignore_missing_imports = true

[mypy-jose.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-google.*]
ignore_missing_imports = true

[mypy-googleapiclient.*]
ignore_missing_imports = true
