[metadata]
name = platform-reports
description = Neu.ro platform reports
url = https://github.com/neuro-inc/platform-reports
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
platforms = any
install_requires =
    neuro-auth-client==22.6.1
    neuro-config-client==23.2.2
    neuro-sdk==22.7.1
    neuro-logging==21.12.2
    aiohttp==3.8.3
    python-jose==3.3.0
    lark-parser==0.12.0
    aiobotocore==2.4.0
    google-api-python-client==2.65.0
    python-dateutil==2.8.2

[options.entry_points]
console_scripts =
    metrics-server = platform_reports.api:run_metrics_server
    prometheus-proxy = platform_reports.api:run_prometheus_proxy
    grafana-proxy = platform_reports.api:run_grafana_proxy

[options.extras_require]
dev =
    mypy==0.982
    pre-commit==2.20.0
    pytest==7.2.0
    pytest-aiohttp==1.0.4
    pytest-asyncio==0.20.1
    types-PyYAML
    types-python-dateutil

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER
known_first_party=platform_reports
known_tests=tests
combine_as_imports=true

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    ignore::DeprecationWarning:aiohttp
    ignore:invalid escape sequence:DeprecationWarning

[coverage:run]
branch = True
source = platform_reports

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional=True

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-aiohttp_security.*]
ignore_missing_imports = true

[mypy-jose.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-google.*]
ignore_missing_imports = true

[mypy-googleapiclient.*]
ignore_missing_imports = true
