[metadata]
name = platform_reports
description = Neu.ro platform reports
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neuro-inc/platform-reports
license = Apache 2
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    aiobotocore==2.15.2
    aiohttp-apispec==2.2.3
    aiohttp[speedups]==3.10.10
    google-api-python-client==2.153.0
    lark==1.2.2
    marshmallow==3.23.1
    neuro-auth-client==24.8.0
    neuro-config-client==24.11.0
    neuro-logging==24.4.0
    neuro-sdk==23.2.0
    pydantic==2.10.0
    pydantic-settings==2.6.1
    python-dateutil==2.9.0.post0
    python-jose==3.3.0
    uvloop
python_requires = >=3.11
include_package_data = True
package_dir =
    = src
platforms = any
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    metrics-api = platform_reports.api:run_metrics_api
    metrics-exporter = platform_reports.api:run_metrics_exporter
    prometheus-proxy = platform_reports.api:run_prometheus_proxy
    grafana-proxy = platform_reports.api:run_grafana_proxy

[options.extras_require]
dev =
    mypy
    pre-commit
    pytest==8.3.3
    pytest-aiohttp==1.0.5
    pytest-asyncio==0.21.2
    pytest-cov==6.0.0
    pytest-docker
    ruff
    types-PyYAML
    types-python-dateutil

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings =
    ignore::DeprecationWarning:aiohttp
    ignore:invalid escape sequence:DeprecationWarning

[coverage:run]
branch = True
source = platform_reports

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
no_implicit_optional = True

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-aiohttp_security.*]
ignore_missing_imports = true

[mypy-jose.*]
ignore_missing_imports = true

[mypy-aiobotocore.*]
ignore_missing_imports = true

[mypy-google.*]
ignore_missing_imports = true

[mypy-googleapiclient.*]
ignore_missing_imports = true

[mypy-aiohttp_apispec.*]
ignore_missing_imports = true
